--- a/src/components/ButtonArrow/ButtonArrow.scss
+++ b/src/components/ButtonArrow/ButtonArrow.scss
@@ -3,20 +3,37 @@
 .button-arrow {
 	background-color: transparent;
 	border: none;
+	border-top: 2px solid $grey-light;
 	display: inline-block;
-	font-weight: 400;
-	letter-spacing: 5px;
-	padding: 20px 40px 20px 20px;
-	position: relative;
+	font-weight: 700;
+	margin-top: 15px;
+	padding: 15px 45px 15px 15px;
 	text-align: center;
+	width: 100%;
 
 	&:hover {
 		cursor: pointer;
+
+		.button-arrow__arrow {
+			&--central-bar,
+			&--bottom-bar,
+			&--top-bar {
+				&:after {
+					animation: arrowAnimation 2s infinite
+						cubic-bezier(0.3, 0.7, 0.7, 0.3);
+				}
+			}
+		}
+	}
+
+	&__text {
+		position: relative;
 	}
 
 	&__arrow {
+		margin-left: -15px;
 		position: absolute;
-		top: 60px;
+		top: 40px;
 		transform: rotate(-90deg);
 
 		&--central-bar,
@@ -43,8 +60,6 @@
 			}
 
 			&:after {
-				animation: arrowAnimation 2s infinite
-					cubic-bezier(0.3, 0.7, 0.7, 0.3);
 				background: $red;
 			}
 		}
