--- a/src/css/Global.scss
+++ b/src/css/Global.scss
@@ -13,8 +13,10 @@ html {
 
 body {
 	background-color: $grey-light;
+	box-sizing: border-box;
 	font: 400 16px "Bitter", sans-serif;
 	height: 100%;
+	min-height: 100vh;
 	padding-bottom: 90px;
 	position: relative;
 
