--- a/src/widgets/Content/Content.scss
+++ b/src/widgets/Content/Content.scss
@@ -1,10 +1,6 @@
 @import "../../css/Global.scss";
 
 .content {
-	&__title {
-		color: $red;
-	}
-
 	&__list {
 		.content--wrapper {
 			padding: 10px;
@@ -13,19 +9,6 @@
 		&__item {
 			background-color: $white;
 			box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1);
-
-			&__label {
-				color: $red;
-				font-size: 14px;
-			}
-
-			&__value {
-				margin: 5px 0 10px;
-
-				&:last-of-type {
-					margin-bottom: 0;
-				}
-			}
 		}
 	}
 }
@@ -43,10 +26,6 @@
 		left: 0;
 	}
 
-	&__title {
-		color: $red;
-	}
-
 	&__close {
 		color: $red;
 		position: absolute;
@@ -56,7 +35,22 @@
 	}
 
 	&__list {
-		max-height: calc(100vh - 70px);
+		margin-top: 20px;
+		max-height: calc(100vh - 110px);
 		overflow-y: scroll;
+
+		&__item {
+			border-bottom: 1px solid $grey-medium;
+			margin-bottom: 20px;
+			padding-bottom: 5px;
+
+			&__title {
+				font-weight: 700;
+			}
+
+			&__message {
+				color: $grey-dark;
+			}
+		}
 	}
 }
